1. Change alert messages to georgian 2. Remove unused imports 3. Fix minor bugs

--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="field-container">
-            <input id="newPassword" class="field-input" type="password" formControlName="repeatedNewPasswordField" placeholder="გაიმეორეთ ახალი პაროლი"/>
+            <input id="repeatedNewPassword" class="field-input" type="password" formControlName="repeatedNewPasswordField" placeholder="გაიმეორეთ ახალი პაროლი"/>
         </div>
         <button class="login-submit-button" type="submit">
             დადასტურება
