--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -190,6 +190,7 @@
     font-weight: 400;
     line-height: 21.6px;
     letter-spacing: 0.07em;
+    white-space: nowrap;
 }
 
 .location-container{
@@ -228,6 +229,7 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 21.6px;
+    white-space: nowrap;
 }
 
 .input-container{
@@ -238,16 +240,16 @@
 }
 
 .search-by-name-container{
-    width: 452px;
+    width: 470px;
     height: 54px;
 }
 
 .search-by-name{
-    width: 418px;
+    width: 440px;
     height: 50px;
     border-radius: 50px;
     background: #FFFFFF;
-    border: 1px solid #18A4E180;
+    border: none;
     font-family: 'FiraGO';
     padding-left: 30px;
     font-size: 14px;
@@ -273,17 +275,17 @@
 }
 
 .search-by-speciality-container{
-    width: 452px;
+    width: 470px;
     height: 54px;
-    margin-left: 20px;
+    margin-left: 22px;
 }
 
 .search-by-speciality{
-    width: 418px;
+    width: 440px;
     height: 50px;
     border-radius: 50px;
     background: #FFFFFF;
-    border: 1px solid #18A4E180;
+    border: none;
     font-family: 'FiraGO';
     padding-left: 30px;
     font-size: 14px;
@@ -311,7 +313,7 @@
 .search-button{
     width: 50px;
     height: 50px;
-    margin-left: 20px;
+    margin-left: 22px;
     background: #053354;
     display: flex;
     border-radius: 25px;
@@ -368,7 +370,7 @@
 
 .search-results {
     position: absolute;
-    width: 450px;
+    width: auto;
     padding-left: 0;
     border: 1px solid #18A4E1;
     border-bottom-left-radius: 25px;
