--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,6 +1,11 @@
 .profile-container{
     width: 100%;
     height: auto;
+}
+
+.user-profile-container{
+    width: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
 }
