Add Category component and initialize categories table

--- a/src/app/components/admin-profile/admin-profile.component.html
+++ b/src/app/components/admin-profile/admin-profile.component.html
@@ -10,7 +10,7 @@
                 <div class="menu-entry-container">
                     რეგისტრაცია
                 </div>
-                <div class="menu-entry-container">
+                <div class="menu-entry-container" routerLink="/category">
                     კატეგორიები
                 </div>
                 <div class="menu-entry-container">
