--- a/src/app/components/category-doctor-view/category-doctor-view.component.html
+++ b/src/app/components/category-doctor-view/category-doctor-view.component.html
@@ -17,10 +17,10 @@
         </div>
     </div>
     <div class="buttons-container">
-        <div class="edit-doctor-button-container">
+        <div class="edit-doctor-button-container" routerLink="/profile/{{doctor?.id}}">
             <img src="/assets/images/edit-doctor.svg" class="edit-doctor-image"/>
         </div>
-        <div class="delete-doctor-button-container">
+        <div class="delete-doctor-button-container" (click)="DeleteDoctor()">
             <img src="/assets/images/delete-doctor.svg" class="delete-doctor-image"/>
         </div>
     </div>
