--- a/src/app/components/category-doctor-view/category-doctor-view.component.html
+++ b/src/app/components/category-doctor-view/category-doctor-view.component.html
@@ -17,7 +17,8 @@
         </div>
     </div>
     <div class="buttons-container">
-        <div class="edit-doctor-button-container" routerLink="/profile/{{doctor?.id}}">
+        <!-- TODO fix flickering when navigating -->
+        <div class="edit-doctor-button-container" [routerLink]="['/profile', doctor?.id]">
             <img src="/assets/images/edit-doctor.svg" class="edit-doctor-image"/>
         </div>
         <div class="delete-doctor-button-container" (click)="DeleteDoctor()">
