--- a/src/app/components/edit-doctor/edit-doctor.component.css
+++ b/src/app/components/edit-doctor/edit-doctor.component.css
@@ -61,6 +61,7 @@
 .profile-info-name{
     width: 138px;
     height: 22px;
+    white-space: nowrap;
     font-family: 'FiraGO';
     font-size: 18px;
     font-weight: 400;
