--- a/src/app/components/admin-profile/admin-profile.component.html
+++ b/src/app/components/admin-profile/admin-profile.component.html
@@ -7,7 +7,7 @@
                     <img src="/assets/images/mid-line-icon.svg" class="mid-line-icon">
                     <img src="/assets/images/bot-line-icon.svg" class="bot-line-icon">
                 </div>
-                <div class="menu-entry-container">
+                <div class="menu-entry-container" routerLink="/register-doctor">
                     რეგისტრაცია
                 </div>
                 <div class="menu-entry-container" routerLink="/category">
