--- a/src/app/components/edit-doctor/edit-doctor.component.html
+++ b/src/app/components/edit-doctor/edit-doctor.component.html
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div class="button-container">
-        <div class="add-doctor-button-container">
+        <div class="add-doctor-button-container" (click)="RegisterDoctor()">
             <div class="add-doctor-button">+ დამატება</div>
         </div>
         <div class="edit-doctor-button-container" (click)="ToggleEditMode()">
