--- a/src/app/components/edit-doctor/edit-doctor.component.css
+++ b/src/app/components/edit-doctor/edit-doctor.component.css
@@ -61,12 +61,14 @@
 .profile-info-name{
     width: 138px;
     height: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     white-space: nowrap;
     font-family: 'FiraGO';
     font-size: 18px;
     font-weight: 400;
     line-height: 21.6px;
-    text-align: center;
     color: #18A4E1;
 }
 
