--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,10 +6,10 @@
     </div>
     <div class="info-container">
         <div class="info-headings">
-            <span class="info-heading">ინფორმაცია</span>    
-            <span class="info-heading">პაციენტებისთვის</span>
-            <span class="info-heading">კონტაქტი</span>
-            <span class="info-heading">გამოგვყევით</span>
+            <span class="info-heading1">ინფორმაცია</span>    
+            <span class="info-heading2">პაციენტებისთვის</span>
+            <span class="info-heading3">კონტაქტი</span>
+            <span class="info-heading4">გამოგვყევით</span>
         </div>
         <div class="info-bodies">
             <div class="info-body1">
