--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -8,16 +8,14 @@
 .main-header-container{
     height: 66px;
     margin-top: 17px;
-    margin-left: 130px;
-    margin-right: 130px;
     margin-bottom: 27px;
     display: flex;
 }
 
 .logo-container{
     display: flex;
-    padding-left: 20px;
     margin-right: 20px;
+    margin-left: 150px;
     cursor: pointer;
 }
 
@@ -81,10 +79,10 @@
 }
 
 .authorize-register-button{
-    margin-left: 17px;
+    margin-left: auto;
     margin-right: 29px;
     margin-top: 14px;
-    margin-bottom: 34px;
+    /* margin-bottom: 34px; */
     width: auto;
     height: 18px;
     padding-left: 25px;
@@ -125,6 +123,7 @@
 
 .language-button{
     margin-top: 14px;
+    margin-right: 150px;
     width: auto;
     height: 18px;
     padding-top: 13px;
