1. Implement custom error message handling instead of displaying alerts 2. Add DisplayMessageComponent 3. Add DisplayMessageService 4. Add MessageConstants to store messages and their severity 5. Update html/css styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <main>
   <section class="content">
     <app-header></app-header>
+    <app-display-message 
+      *ngIf="(errorMessage$ | async) as message" 
+      [message]="message ?? ''" 
+      [severity]="getSeverity(errorSeverity$ | async)">
+    </app-display-message>
     <router-outlet></router-outlet>
     <app-footer></app-footer>
   </section>
