1. Fix bug when Doctors list was not updated after the value changed 2. Fix pin/unpin bug when filter is active 3. Update html/css styles

--- a/src/app/components/admin-profile/admin-profile.component.html
+++ b/src/app/components/admin-profile/admin-profile.component.html
@@ -32,14 +32,15 @@
         <div *ngIf="!doctorSelected" class="admin-start-page">
             <div class="admin-welcome-text">
                 <div class="admin-welcome-header">
-                    მოგესალმებით ადმინის გვერდზე
+                    მოგესალმებით ადმინისტრატორის გვერდზე
                 </div>
                 <div class="admin-welcome-body">
-                    აქედან შესაძლებელია:
+                    ადმინისტრატორს შეუძლია:
                     <ul>
                         <li>ახალი ექიმის დამატება</li>
                         <li>ექიმის ინფორმაციის ნახვა</li>
                         <li>ექიმის ინფორმაციის რედაქტირება</li>
+                        <li>ექიმის წაშლა</li>
                     </ul>
                 </div>
             </div>
