--- a/src/app/components/doctor-card/doctor-card.component.css
+++ b/src/app/components/doctor-card/doctor-card.component.css
@@ -1,4 +1,15 @@
-.doctor-card-container{
+.unpinned-doctor-card-container{
+    width: 390px;
+    height: 390px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    background: #FFFFFF;
+    border: 1px solid #ECF2F8;
+    box-shadow: 0px 4px 4px 0px #0533540D;
+}
+
+.pinned-doctor-card-container{
     width: 390px;
     height: 390px;
     display: flex;
@@ -6,6 +17,7 @@
     border-radius: 10px;
     background: #FFFFFF;
     border: 1px solid #18A4E14D;
+    box-shadow: 0px 4px 4px 0px #0533540D;
 }
 
 .doctor-card-head{
