--- a/src/app/components/display-message/display-message.component.css
+++ b/src/app/components/display-message/display-message.component.css
@@ -3,29 +3,54 @@
     top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     color: black;
     width: 300px;
+    height: auto;
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.952);
   }
-  
-  .error {
-    background-color: red;
-  }
-  
-  .information {
-    background-color: yellow;
-  }
-  
-  .success {
-    background-color: green;
-  }
-  
-  .message-modal-content p {
-    margin: 0;
+
+  .message-modal-content{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  } 
+
+  .message-modal-head{
+    height: auto;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family: 'FiraGO';
-    font-size: 1.2em;
+    font-size: 20px;
+    color: #18A4E1;
+  }
+
+  .message-icon{
+    height: 20px;
+    width: 20px;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .message-modal-body{
+    height: auto;
+    width: 100%;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'FiraGO';
+    font-size: 14px;
+    color: #053354;
   }
